--- a/style.css
+++ b/style.css
@@ -46,13 +46,14 @@ button {
     cursor: pointer;
     width: 100%;
     border-radius: 20px;
+    font-weight: bold;
 }
 
 button:hover {
     opacity: 0.8;
 }
 
-label   {
+label {
     color: #fff;
     margin: 10px;
     width: 100px;
@@ -72,13 +73,15 @@ label   {
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 #links {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 
@@ -87,10 +90,19 @@ label   {
     width: 100px;
     height: 30px;
     padding: 0;
-    margin: 10px;
+    margin: 5px;
     display: none;
 }
 
+#ball {
+    position: absolute;
+    display: none;
+    width: 30px;
+    height: 30px;
+    background-color: #FF4545;
+    border-radius: 50%;
+    z-index: 1;
+}
 
 #object {
     position: absolute;
@@ -99,4 +111,13 @@ label   {
     height: 30px;
     background-color: #FF4545;
     border-radius: 20px;
+}
+
+#score {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 10rem;
 }
