--- a/style.css
+++ b/style.css
@@ -20,23 +20,6 @@ p {
     color: #fff;
 }
 
-a {
-    color: #fff;
-    text-decoration: none;
-    background-color: #FF4545;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-}
-
-a:hover {
-    opacity: 0.8;
-}
-
 button {
     background-color: #4CAF50;
     color: white;
@@ -56,9 +39,27 @@ button:hover {
 label {
     color: #fff;
     margin: 10px;
-    width: 100px;
+    width: 150px;
     display: flex;
     justify-content: space-between;
+}
+
+.link {
+    color: #fff;
+    text-decoration: none;
+    background-color: #FF4545;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    font-weight: bold;
+}
+
+.link:hover {
+    opacity: 0.8;
 }
 
 #container {
@@ -76,13 +77,17 @@ label {
     z-index: 2;
 }
 
-#links {
+#link-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+}
+
+#score-info {
+    display: none;
 }
 
 #stop {
@@ -92,6 +97,16 @@ label {
     padding: 0;
     margin: 5px;
     display: none;
+}
+
+#score {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 10rem;
+    text-align: center;
 }
 
 #ball {
@@ -111,14 +126,4 @@ label {
     height: 30px;
     background-color: #FF4545;
     border-radius: 20px;
-}
-
-#score {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: 10rem;
-    text-align: center;
 }
