--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ label {
     opacity: 0.8;
 }
 
-#top-bar{
+#top-bar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -139,7 +139,7 @@ label {
     z-index: 2;
 }
 
-#object {
+#paddle {
     position: absolute;
     bottom: 20px;
     width: 20%;
