--- a/style.css
+++ b/style.css
@@ -12,6 +12,20 @@ p {
     text-align: center;
 }
 
+h1 {
+    font-size: 3rem;
+    margin: 20px;
+}
+
+h1::after {
+    content: "";
+    display: block;
+    height: 8px;
+    width: 100%;
+    border-radius: 20px;
+    background-color: #FF4545;
+}
+
 .button {
     background-color: #4CAF50;
     border: none;
